Spacing fixes

--- a/_sass/_overrides.scss
+++ b/_sass/_overrides.scss
@@ -118,32 +118,3 @@ hr {
     }
   }
 }
-
-.family {
-  font-weight: bold;
-
-  &.family-sawyer { }
-
-  &.family-tucker { }
-
-  &.family-hudson { }
-}
-
-
-.about-title {
-  font-family: 'Lily Script One';
-  font-size: 200%;
-  text-align: center;
-
-  &.about-title-earlies { }
-
-  &.about-title-college { }
-
-  &.about-title-twenties { }
-
-  &.about-title-boys { }
-
-  &.about-title-ronna { }
-
-  &.about-title-dogs { }
-}
